build: allow native access for unnamed modules